FIX: Raise z-index of scroll button over new messages

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -415,7 +415,7 @@ $header-height: 2.5rem;
     padding: 0.5em;
     border-radius: 100%;
     opacity: 20%;
-
+    z-index: 2;
     &:hover {
       opacity: 75%;
     }
